Added conditional reveal radios to verification questions

--- a/app/views/8/verification-report/essential-information.html
+++ b/app/views/8/verification-report/essential-information.html
@@ -147,10 +147,37 @@
             </fieldset>
           </div>
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="checks-verification">
-             How have you verified this information?
-            </h3>
-            <input class="govuk-input" id="check-verification" name="check-verification" type="text" value="{{data['check-verification']}}">
+            <fieldset class="govuk-fieldset" aria-describedby="essential-checks-hint">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                <h3 class="govuk-fieldset__heading">
+                  Have you verified this information?
+                </h3>
+              </legend>
+              <div id="essential-checks-hint" class="govuk-hint">
+                Select one option.
+              </div>
+              <div class="govuk-radios" data-module="govuk-radios">
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="essential-checks" name="essential-checks" type="radio" value="Yes" data-aria-controls="conditional-essential-checks">
+                  <label class="govuk-label govuk-radios__label" for="essential-checks">
+                    Yes
+                  </label>
+                </div>
+                <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="contact-by-email">
+                      How  have you verified this information?
+                    </label>
+                    <input class="govuk-input govuk-!-width-one-third" id="essentialChecksYes" name="essentialChecksYes" type="Yes" spellcheck="false" autocomplete="Yes">
+                  </div>
+                </div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="essential-checks-2" name="essential-checks" type="radio" value="No" data-aria-controls="essential-checks-2">
+                  <label class="govuk-label govuk-radios__label" for="essential-checks-2">
+                    No
+                  </label>
+                </div>
+            </fieldset>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
@@ -221,19 +248,49 @@
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m" for="dependant-caring-responsibilities">
-              Dependants
+              Dependants and caring responsibilities
             </h2>
             <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
               Record any dependants and caring responsibilities that could impact the defendant's ability to do unpaid work or receive an electronic monitoring curfew.
             </div>
-            <textarea class="govuk-textarea" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" rows="5" aria-describedby="dependant-caring-responsibilities-hint">{{data['dependant-caring-responsibilities']}}</textarea>
+            <textarea class="govuk-textarea" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" rows="2" aria-describedby="dependant-caring-responsibilities-hint">{{data['dependant-caring-responsibilities']}}</textarea>
           </div>
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="how-verified-dependants">
-             How have you verified this information?
-            </h3>
-            <input class="govuk-input" id="how-verified-dependants" name="how-verified-dependants" type="text" value="{{data['how-verified-dependants']}}">
-          </div>
+            <div class="govuk-form-group">
+              <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                  <h2 class="govuk-fieldset__heading">
+                    Have you verified this information?
+                  </h2>
+                </legend>
+                <div id="contact-hint" class="govuk-hint">
+                  Select one option.
+                </div>
+                <div class="govuk-radios" data-module="govuk-radios">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="email" data-aria-controls="conditional-contact">
+                    <label class="govuk-label govuk-radios__label" for="contact">
+                      Yes
+                    </label>
+                  </div>
+                  <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
+                    <div class="govuk-form-group">
+                      <label class="govuk-label" for="contact-by-email">
+                        How have you verified this information?
+                      </label>
+                      <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contactByEmail" type="email" spellcheck="false" autocomplete="email">
+                    </div>
+                  </div>
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="contact-2" name="contact" type="radio" value="phone" data-aria-controls="conditional-contact-2">
+                    <label class="govuk-label govuk-radios__label" for="contact-2">
+                      No
+                    </label>
+                  </div>
+                  
+                </div>
+              </fieldset>
+            </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m" for="verify-current-employment">
@@ -245,11 +302,41 @@
             <input class="govuk-input" id="verify-current-employment" name="verify-current-employment" type="text" value="{{data['verify-current-employment']}}">
           </div>
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="health-verification">
-             How have you verified this information?
-            </h3>
-            <input class="govuk-input" id="how-verified-current-employment" name="how-verified-current-employment" type="text" value="{{data['how-verified-current-employment']}}">
-          </div>
+            <div class="govuk-form-group">
+              <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                  <h2 class="govuk-fieldset__heading">
+                    Have you verified this information?
+                  </h2>
+                </legend>
+                <div id="contact-hint" class="govuk-hint">
+                  Select one option.
+                </div>
+                <div class="govuk-radios" data-module="govuk-radios">
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="email" data-aria-controls="conditional-contact">
+                    <label class="govuk-label govuk-radios__label" for="contact">
+                      Yes
+                    </label>
+                  </div>
+                  <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
+                    <div class="govuk-form-group">
+                      <label class="govuk-label" for="contact-by-email">
+                        How have you verified this information?
+                      </label>
+                      <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contactByEmail" type="email" spellcheck="false" autocomplete="email">
+                    </div>
+                  </div>
+                  <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="contact-2" name="contact" type="radio" value="phone" data-aria-controls="conditional-contact-2">
+                    <label class="govuk-label govuk-radios__label" for="contact-2">
+                      No
+                    </label>
+                  </div>
+                  
+                </div>
+              </fieldset>
+            </div>
           <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button">
               Save and continue
