Removed health question from unpaid work and moved to essentail info

--- a/app/views/8/verification-report/unpaid-work.html
+++ b/app/views/8/verification-report/unpaid-work.html
@@ -68,23 +68,9 @@
         <form action="unpaid-work" method="post" novalidate>
           <span class="govuk-caption-l">Dylan Adam Armstrong CRN: E234516</span>
           <h1 class="govuk-heading-l">Suitability for unpaid work</h1>
-          <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="verify-no-health-conditions">Health
-               conditions</h2>
-            <div id="verify-no-health-conditions-hint" class="govuk-hint">Record
-              any health conditions that may affect their ability to complete
-              unpaid work.</div>
-            <textarea class="govuk-textarea" id="verify-no-health-conditions" name="verify-no-health-conditions" rows="5" aria-describedby="verify-no-health-conditions-hint">{{data['verify-no-health-conditions']}}</textarea>
-          </div>
-          <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="health-verification">How have you
-              verified this information?</h3>
-            <input class="govuk-input" id="how-verified-health-conditions" name="how-verified-health-conditions" type="text" value="{{data['how-verified-health-conditions']}}">
-          </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="verify-dwp-involvement">Department
-              for Work and Pensions</h2>
+            <h2 class="govuk-heading-m" for="verify-dwp-involvement">Benefits</h2>
             <div id="verify-dwp-involvement-hint" class="govuk-hint">
               Record any benefits that the defendant gets that may impact on
               their eligibility or fitness for unpaid work.</div>
