--- a/app/views/8/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/8/verification-report/electronic-monitoring-for-curfew.html
@@ -66,13 +66,13 @@
       <main id="main-content" class="app-content" role="main">
         <form action="electronic-monitoring-for-curfew" method="post" novalidate>
           <span class="govuk-caption-l">Dylan Adam Armstrong CRN: E234516</span>
-          <h1 class="govuk-heading-l">Suitability for electronic monitoring</h1>
+          <h1 class="govuk-heading-l">Suitability for electronic monitoring curfew</h1>
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m" for="consent-electronic-monitoring-curfew">
               Informed consent to an electronic monitoring curfew</h2>
             <div id="health-conditions-hint" class="govuk-hint">It is a legal
               requirement that the defendant gives their informed consent to an electronic monitoring curfew.
-            <br/><br/>If the main occupier of the address is not the defendant, they must also give their informed consent.</div>
+            <br/><br/>If the main occupier of the address where the defendant will be curfewed to is not the defendant, they must also give their informed consent.</div>
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -93,25 +93,22 @@
               </fieldset>
             </div>
             <div class="govuk-form-group">
-              <h3 class="govuk-heading-m" for="health-verification">How have you
-                verified this information?</h3>
-              <input class="govuk-input" id="how-verified-informed-consent-electronic-monitoring" name="how-verified-informed-consent-electronic-monitoring" type="text" value="{{data['how-verified-informed-consent-electronic-monitoring']}}">
-            </div>
-          </div>
-          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-          <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="health-electronic-monitoring">
-              Health conditions</h2>
-            <div id="health-electronic-monitoring-hint" class="govuk-hint">
-              Record any health conditions that may affect their suitability to
-              receive an electronic monitoring curfew. <br/><br/>For example,
-              mental health conditions or substance misuse.</div>
-            <textarea class="govuk-textarea" id="health-electronic-monitoring" name="health-electronic-monitoring" rows="5" aria-describedby="health-electronic-monitoring-hint">{{data['health-electronic-monitoring']}}</textarea>
-          </div>
-          <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="how-verified-health-electronic-monitoring">
-              How have you verified this information?</h3>
-            <input class="govuk-input" id="how-verified-health-electronic-monitoring" name="how-verified-health-electronic-monitoring" type="text" value="{{data['how-verified-health-electronic-monitoring']}}">
+              <div class="govuk-form-group">
+                <h2 class="govuk-heading-m" for="health-electronic-monitoring">
+                  How have you verified this information?</h2>
+                <div id="subject-hint" class="govuk-hint">
+                  You should record how you have recorded consent.
+                </div>
+                <select class="govuk-select" id="subject" name="subject" aria-describedby="subject-hint">
+                  <option value="choose" selected>Choose an option</option>
+                  <option value="householdbill">Phone call</option>
+                  <option value="tenancyagreement">Email</option>
+                  <option value="mortgagestatement">Text message</option>
+                  <option value="counciltaxstatement">In person</option>
+                  <option value="other">Other</option>
+                  <option value="noproofofaddress">I have not recorded consent</option>
+                </select>
+              </div>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
