--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,6 +10,14 @@
       {{ serviceName }}
     </h1>
     <h2 class="govuk-heading-m">v7</h2>
+      <p><a class="govuk-link" href="/8/verification-report/start.html">Prototype</a></p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3333">
+            Increment to v8.</a></p>
+        </li>
+      </ul>
+    <h2 class="govuk-heading-m">v7</h2>
       <p><a class="govuk-link" href="/7/verification-report/start.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
