--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,10 @@
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3333">
             Increment to v8.</a></p>
         </li>
+        <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://miro.com/app/board/uXjVM6w-eIM=/?moveToWidget=3458764567898360031&cot=14">
+            Changes to how we gather information for the verification report.</a></p>
+        </li>
       </ul>
     <h2 class="govuk-heading-m">v7</h2>
       <p><a class="govuk-link" href="/7/verification-report/start.html">Prototype</a></p>
