--- a/app/views/8/verification-report/essential-information.html
+++ b/app/views/8/verification-report/essential-information.html
@@ -83,7 +83,9 @@
           <h1 class="govuk-heading-l">
             Essential information
           </h1>
-          <p class="govuk-body">You should request these checks from the relevant agencies and record the results when you have them.<br>You can return to this section at any time.</p>
+          <p class="govuk-body">You should request these checks from the
+            relevant agencies and record the results when you have them.<br/>
+            You can return to this section at any time.</p>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
@@ -153,9 +155,6 @@
                   Have you verified this information?
                 </h3>
               </legend>
-              <div id="essential-checks-hint" class="govuk-hint">
-                Select one option.
-              </div>
               <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="essential-checks" name="essential-checks" type="radio" value="Yes" data-aria-controls="conditional-essential-checks">
@@ -287,7 +286,6 @@
                       No
                     </label>
                   </div>
-
                 </div>
               </fieldset>
             </div>
@@ -337,10 +335,11 @@
                   <div class="govuk-form-group">
                     <h2 class="govuk-heading-m" for="verify-no-health-conditions">Health
                        conditions</h2>
-                    <div id="verify-no-health-conditions-hint" class="govuk-hint">Record
-                      any health conditions that may affect their ability to complete
-                      unpaid work or receive an electronic monitoring curfew.
-                      <br>You should include both physical and mental health conditions.</div>
+                    <div id="verify-no-health-conditions-hint" class="govuk-hint">
+                      Record any health conditions that may affect their ability
+                      to complete unpaid work or receive an electronic
+                      monitoring curfew.<br />You should include both physical
+                      and mental health conditions.</div>
                     <textarea class="govuk-textarea" id="verify-no-health-conditions" name="verify-no-health-conditions" rows="5" aria-describedby="verify-no-health-conditions-hint">{{data['verify-no-health-conditions']}}</textarea>
                   </div>
                   <div class="govuk-form-group">
