--- a/app/views/8/verification-report/choose-sections.html
+++ b/app/views/8/verification-report/choose-sections.html
@@ -25,7 +25,7 @@
                 Essential information</a>
             </li>
             <li class="app-subnav__section-item">
-              {% if (data['verification-report-sections'] == 'unpaidWork') or (data['verification-report-sections'] == 'both')  %}
+              {% if (data['verification-report-sections'] == 'unpaidWork') or (data['verification-report-sections'] == 'Include sections for both unpaid work and electronic monitoring')  %}
                 <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">
                   Suitability for unpaid work</a>
               {% else %}
@@ -34,7 +34,7 @@
               {% endif %}
             </li>
             <li class="app-subnav__section-item">
-              {% if (data['verification-report-sections'] == 'electronicMonitoring') or (data['verification-report-sections'] == 'both')  %}
+              {% if (data['verification-report-sections'] == 'electronicMonitoring') or (data['verification-report-sections'] == 'Include sections for both unpaid work and electronic monitoring')  %}
                 <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">
                   Suitability for electronic monitoring</a>
               {% else %}
@@ -91,7 +91,7 @@
                   </label>
                 </div>
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="verification-report-sections-3" name="verification-report-sections" type="radio" value="both" {{ checked("verification-report-sections", "both") }}>
+                  <input class="govuk-radios__input" id="verification-report-sections-3" name="verification-report-sections" type="radio" value="Include sections for both unpaid work and electronic monitoring" {{ checked("verification-report-sections", "Include sections for both unpaid work and electronic monitoring") }}>
                   <label class="govuk-label govuk-radios__label" for="verification-report-sections-3">
                     Include sections for both unpaid work and electronic monitoring
                   </label>
