--- a/app/views/8/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/8/verification-report/electronic-monitoring-for-curfew.html
@@ -9,7 +9,7 @@
         <h2 class="govuk-visually-hidden" id="app-subnav-heading">Sections</h2>
           <ul class="app-subnav__section">
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link" href="defendant-details">Defendant details</a>
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="defendant-details">Defendant details</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-underline" href="offence-information">
@@ -24,7 +24,7 @@
                 Essential information</a>
             </li>
             <li class="app-subnav__section-item">
-              {% if (data['verification-report-sections'] == 'unpaidWork') or (data['verification-report-sections'] == 'both')  %}
+              {% if (data['verification-report-sections'] == 'unpaidWork') or (data['verification-report-sections'] == 'Include sections for both unpaid work and electronic monitoring')  %}
                 <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">
                   Suitability for unpaid work</a>
               {% else %}
@@ -32,7 +32,7 @@
                     Suitability for unpaid work</a>
               {% endif %}
             </li>
-            {% if (data['verification-report-sections'] == 'electronicMonitoring') or (data['verification-report-sections'] == 'both')  %}
+            {% if (data['verification-report-sections'] == 'electronicMonitoring') or (data['verification-report-sections'] == 'Include sections for both unpaid work and electronic monitoring')  %}
               <li class="app-subnav__section-item app-subnav__section-item--current">
                 <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">
                   Suitability for electronic monitoring</a>
