--- a/app/views/8/verification-report/recommendation.html
+++ b/app/views/8/verification-report/recommendation.html
@@ -25,7 +25,7 @@
                 Essential  information</a>
             </li>
             <li class="app-subnav__section-item">
-              {% if (data['verification-report-sections'] == 'unpaidWork') or (data['verification-report-sections'] == 'both')  %}
+              {% if (data['verification-report-sections'] == 'unpaidWork') or (data['verification-report-sections'] == 'Include sections for both unpaid work and electronic monitoring')  %}
                 <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">
                   Suitability for unpaid work</a>
               {% else %}
@@ -34,7 +34,7 @@
               {% endif %}
             </li>
             <li class="app-subnav__section-item">
-              {% if (data['verification-report-sections'] == 'electronicMonitoring') or (data['verification-report-sections'] == 'both')  %}
+              {% if (data['verification-report-sections'] == 'electronicMonitoring') or (data['verification-report-sections'] == 'Include sections for both unpaid work and electronic monitoring')  %}
                 <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">
                   Suitability for electronic monitoring</a>
               {% else %}
@@ -107,9 +107,9 @@
               </label>
             </h2>
             <div id="suitability-explanation-hint" class="govuk-hint">
-              This will be included in the final report which is presented to the Magistrate. 
+              This will be included in the final report which is presented to the Magistrate.
               <br>You should include the things you have taken into consideration in making your decision.
-              <br>Keep your explanation focussed on the checks you have done, and the things you found out at interview.  
+              <br>Keep your explanation focussed on the checks you have done, and the things you found out at interview.
             </div>
             <textarea class="govuk-textarea" id="suitability-explanation" name="suitability-explanation" rows="9" aria-describedby="suitability-explanation-hint">{{data['suitability-explanation']}}</textarea>
           </div>
