Fix formatting of code

--- a/app/views/8/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/8/verification-report/electronic-monitoring-for-curfew.html
@@ -71,8 +71,11 @@
             <h2 class="govuk-heading-m" for="consent-electronic-monitoring-curfew">
               Informed consent to an electronic monitoring curfew</h2>
             <div id="health-conditions-hint" class="govuk-hint">It is a legal
-              requirement that the defendant gives their informed consent to an electronic monitoring curfew.
-            <br/><br/>If the main occupier of the address where the defendant will be curfewed to is not the defendant, they must also give their informed consent.</div>
+              requirement that the defendant gives their informed consent to an
+              electronic monitoring curfew.<br /><br />
+              If the main occupier of the address where the defendant will be
+              curfewed to is not the defendant, they must also give their
+              informed consent.</div>
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
